# par-dpia-form

./: .containerignore  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSES.txt  README.md  SECURITY.md  codecov.yml  compose-dev-keycloak.json  compose.yaml  form_standard.md  licenses.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publiccode.yaml  pyproject.toml  version.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.github/: dependabot.yaml  dependabot.yml  pull_request_template.md
containers/: compose-dev-keycloak.json  compose.dev.yaml
docs/: account-koppeling.md  deployment.md  gegevensverwerking.md  image-handling.md  markdown-support.md
form-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
schemas/: assessment-definition.v1.schema.json  assessment-definition.v2.schema.json  assessment-output.v2.schema.json  assessmentSchema.json  begrippenkader.v1.schema.json  begrippenkaderSchema.json  formSchema.json  schema_DPIA.json  schema_begrippenkader.json  schema_prescanDPIA.json  source-manifest.v1.schema.json
script/: build_sources.py  convert_definitions_from_AK.py  convert_definitions_from_algoritmekader.py  definition_enricher.py  generate-html  generate_licenses.py  generate_md_table_questions.py  generate_md_table_tasks.py  manifest.py  run_all.py  run_sync_validate_and_inject.py  run_validate_and_inject.py  schema_validator.py  sync_begrippenkader  sync_begrippenkader.py  validate
(+350 files in other folders)
