[project]
name = "par-form-scripts"
version = "0" # placeholder: required by PEP 621, never built or published
description = "Build-time Python pipeline for the assessment sources (script/)."
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"
# .claude holds Claude tooling, not project code, and isn't in ruff's defaults.
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "S", "SIM", "C4", "RUF", "PTH", "PT", "A", "T20", "LOG", "G"]

[tool.ruff.lint.per-file-ignores]
# Tests use asserts, and shell out to known tools (git/bash) with fixed args.
"script/tests/**" = ["S101", "S603", "S607"]
